<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medicine"
    tools:context=".Today">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:fontFamily="sans-serif-black"
        android:paddingTop="04dp"
        android:text="@string/today"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/background" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="101dp"
        android:text="@string/today_name"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="15dp"
        android:text="@string/today_type"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="15dp"
        android:text="@string/today_dose"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="14dp"
        android:text="@string/today_bp"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="21dp"
        android:text="@string/today_hr"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="17dp"
        android:text="@string/today_bloodsugar"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="16dp"
        android:text="@string/today_walking"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/today_running"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:fontFamily="sans-serif-medium" />

    <TextView
        app:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:textColor="@color/textcolor"
        android:id="@+id/textView9"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="445dp"
        android:text="@string/today_cycling" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="102dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText2"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="18dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText9"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText10"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText11"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="19dp"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText13"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText12"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText14"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText13"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText15"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText14"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:background="@color/editbox"
        android:inputType="textPersonName" />


</RelativeLayout>