<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/medicine"
    tools:context=".ChangePassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:fontFamily="sans-serif-black"
        android:paddingTop="04dp"
        android:text="@string/changePassword"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:fontFamily="sans-serif-black"
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="112dp"
        android:text="@string/changepassword_Old" />

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:fontFamily="sans-serif-black"
        android:id="@+id/textView"
        android:layout_width="96dp"
        android:layout_height="25dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="27dp"
        android:text="@string/changepassword_New" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="27dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/changepassword_Confirm"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginTop="110dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_below="@+id/editText2"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:background="@color/editbox"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="262dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:text="@string/changepasswordbutton" />
</RelativeLayout>